domain/src/main/java/com/example/clean_architecture/domain/core/error/DefaultCoroutineError.kt
package com.example.clean_architecture.domain.core.error

data class DefaultCoroutineError(
    val exception: Exception,
) : CoroutineError